# pic-splitter

./: .gitignore  CLAUDE.md  pyproject.toml
src/pic_splitter/: __init__.py
