[project]
name = "pic-splitter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "petelouise", email = "programmetress@petelouises.cloud" }]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.4",
    "scikit-image>=0.25.2",
]

[project.scripts]
pic-splitter = "pic_splitter:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
