[project]
name = "pic-splitter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "petelouise", email = "programmetress@petelouises.cloud" }]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.4",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
]

[project.scripts]
pic-splitter = "pic_splitter:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyupgrade>=3.19.1",
    "ruff>=0.11.2",
]
